; ModuleID = '/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_trace_ptrace.c_fpm_trace_get_long.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/fpm/fpm/extr_fpm_trace_ptrace.c_fpm_trace_get_long.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i64 0, align 8
@PTRACE_PEEKDATA = common dso_local global i32 0, align 4
@traced_pid = common dso_local global i32 0, align 4
@ZLOG_SYSERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [34 x i8] c"failed to ptrace(PEEKDATA) pid %d\00", align 1
@PIOD_READ_D = common dso_local global i32 0, align 4
@PT_IO = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @fpm_trace_get_long(i64 %0, i64* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  store i64 0, i64* @errno, align 8
  %6 = load i32, i32* @PTRACE_PEEKDATA, align 4
  %7 = load i32, i32* @traced_pid, align 4
  %8 = load i64, i64* %4, align 8
  %9 = inttoptr i64 %8 to i8*
  %10 = call i64 @ptrace(i32 %6, i32 %7, i8* %9, i32 0)
  %11 = load i64*, i64** %5, align 8
  store i64 %10, i64* %11, align 8
  %12 = load i64, i64* @errno, align 8
  %13 = icmp ne i64 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %2
  %15 = load i32, i32* @ZLOG_SYSERROR, align 4
  %16 = load i32, i32* @traced_pid, align 4
  %17 = call i32 @zlog(i32 %15, i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i32 %16)
  store i32 -1, i32* %3, align 4
  br label %19

18:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %19

19:                                               ; preds = %18, %14
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i64 @ptrace(i32, i32, i8*, i32) #1

declare dso_local i32 @zlog(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
